--- a/presentation/css/login.css
+++ b/presentation/css/login.css
@@ -1,26 +1,34 @@
-.container{
+.container {
 }
+
 
 .row-top {
     height: 200px;
     width: 100%;
+    margin: auto;
+    margin-bottom: 40px;
+    margin-top: 10px;
+}
+
+.molecule {
+    display: block;
+    height: 200px;
+    width: auto;
+    margin: auto;
 }
 
 .row-mid {
-    height: 100%;
-    width: 100%;
+    margin: auto;
 }
 
-.col-8{
+.col-8 {
     padding-top: 10px;
     padding-bottom: 40px;
-    border: 3px solid;
 }
 
 .col-4 {
     padding-top: 10px;
     padding-bottom: 40px;
-    border: 3px solid;
     border-right: none;
 }
 
@@ -28,10 +36,10 @@
     background-color: #cc3300;
 }
 
-.login-main-text{
+.login-main-text {
     height: 100%;
 }
 
-.login{
+.login {
 
 }
