created redis service. Add user route added for redis

--- a/services/auth/app/templates/index.html
+++ b/services/auth/app/templates/index.html
@@ -44,10 +44,10 @@
                 </div>
                 <div class="row ">
                     <div class="col-6">
-                        <button type="submit" onclick="javascript: form.action='/auth/login';"  class="btn btn-dark">Submit</button>
+                        <button type="submit" onclick="javascript: form.action='/auth/loginFrontEnd';"  class="btn btn-dark">Submit</button>
                     </div>
                     <div class="col-6  text-right">
-                        <button type="submit" onclick="javascript: form.action='/user';" class="btn btn-secondary">Register</button>
+                        <button type="submit" onclick="javascript: form.action='/userFrontEnd';" class="btn btn-secondary">Register</button>
                     </div>
                 </div>
             </form>
