--- a/services/web/app/templates/main.html
+++ b/services/web/app/templates/main.html
@@ -20,7 +20,7 @@
 <body>
 
 <div class="container" style="">
-
+    {{testing}}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded">
         <a class="navbar-brand" href="index.html">COVID-19 Research Forum</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -43,7 +43,15 @@
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <div class="nav-link">Welcome @username</div>
+                <div class="nav-link">Welcome @{{user_display_name}}</div>
+            </li>
+            <li class="nav-item">
+                <form method="post" action="http://localhost:5000/auth/logout" class="inline">
+                  <input type="hidden" name="extra_submit_param" value="extra_submit_value">
+                  <button type="submit" name="submit_param" value="submit_value" class="btn btn-outline-danger">
+                    Logout
+                  </button>
+                </form>
             </li>
         </ul>
     </nav>
