--- a/services/web/app/templates/main.html
+++ b/services/web/app/templates/main.html
@@ -20,7 +20,6 @@
 <body>
 
 <div class="container" style="">
-    {{testing}}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded">
         <a class="navbar-brand" href="index.html">COVID-19 Research Forum</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -47,10 +46,10 @@
             </li>
             <li class="nav-item">
                 <form method="post" action="http://localhost:5000/auth/logout" class="inline">
-                  <input type="hidden" name="extra_submit_param" value="extra_submit_value">
-                  <button type="submit" name="submit_param" value="submit_value" class="btn btn-outline-danger">
-                    Logout
-                  </button>
+                    <input type="hidden" name="extra_submit_param" value="extra_submit_value">
+                    <button type="submit" name="submit_param" value="submit_value" class="btn btn-outline-danger">
+                        Logout
+                    </button>
                 </form>
             </li>
         </ul>
@@ -59,15 +58,16 @@
     <div class="row centerRow justify-content-center">
         <div class="col-8">
 
-            <form id="postForm" method="post" class="d-none">
+            <form id="postForm" method="post" class="d-none" action="http://localhost:5005/newpost">
                 <div class="form-group">
                     <label for="title">Title</label>
-                    <input type="text" class="form-control" id="title"
+                    <input type="text" class="form-control" name="title" id="title"
                            placeholder="Enter topic">
                 </div>
                 <div class="form-group ">
                     <label for="message">Message</label>
-                    <textarea class="form-control" rows="5" id="message" placeholder="Enter Post"> </textarea>
+                    <textarea class="form-control" rows="5" name="message" id="message"
+                              placeholder="Enter Post"> </textarea>
                 </div>
                 <button type="submit" class="btn btn-dark">Post</button>
             </form>
