--- a/services/auth/app/templates/index.html
+++ b/services/auth/app/templates/index.html
@@ -19,19 +19,13 @@
 </head>
 <body>
 <div class="container" style="">
-    <div class="row row-top ">
+    <div class="row row-top justify-content-center">
         <div class="col-12" style="">
-            <img src="../static/images/molecule.jpg" class="img-fluid rounded molecule" alt="SARS-COV2 molecule" style="">
+            <img src="../static/images/Connect.png" class="img-fluid rounded connect-img" alt="Connect Image" style="">
         </div>
     </div>
-    <div class="row row-mid">
-        <div class="sidenav col-4 border border-dark rounded">
-            <div class="login-main-text">
-                <h2>COVID-19 Research<br> Forum</h2>
-                <p>Login or register from here.</p>
-            </div>
-        </div>
-        <div class="col-8 border border-dark rounded">
+    <div class="row row-mid justify-content-center">
+        <div class="col-4 border border-dark rounded">
             <form class="login" method="post" action="" onsubmit="">
                 <div class="form-group">
                     <label for="username">Username</label>
@@ -44,18 +38,18 @@
                 </div>
                 <div class="row ">
                     <div class="col-6">
-                        <button type="submit" onclick="javascript: form.action='/auth/loginFrontEnd';"  class="btn btn-dark">Submit</button>
+                        <button type="submit" onclick="javascript: form.action='/auth/loginFrontEnd';"  class="btn btn-primary">Submit</button>
                     </div>
                     <div class="col-6  text-right">
-                        <button type="submit" onclick="javascript: form.action='/userFrontEnd';" class="btn btn-secondary">Register</button>
+                        <button type="submit" onclick="javascript: form.action='/userFrontEnd';" class="btn btn-dark">Register</button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
     <div class="row">
-        <div class="col-12 text-right">
-            <p>A COMP 6231: Distributed Systems Project by:<br><b>Osman, Ke and Mathieu </b></p>
+        <div class="col-12 text-center">
+            <p><br><br>A COMP 6231: Distributed Systems Project by:<br><b>Osman, Ke and Mathieu </b></p>
         </div>
     </div>
 </div>
