--- a/services/web/app/templates/main.html
+++ b/services/web/app/templates/main.html
@@ -20,8 +20,8 @@
 <body>
 
 <div class="container" style="">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded">
-        <a class="navbar-brand" href="index.html">COVID-19 Research Forum</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-info rounded">
+        <a class="navbar-brand" href="index.html">Connect</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -69,7 +69,7 @@
                     <textarea class="form-control" rows="5" name="message" id="message"
                               placeholder="Enter Post"> </textarea>
                 </div>
-                <button type="submit" class="btn btn-dark">Post</button>
+                <button type="submit" class="btn btn-primary">Post</button>
             </form>
 
             <div id="centerContent"></div>
