--- a/services/web/app/templates/main.html
+++ b/services/web/app/templates/main.html
@@ -28,7 +28,7 @@
         </button>
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" onclick="newPost()" href="#">New Post</a>
+                <a class="nav-link" onclick="newPostView()" href="#">New Post</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" onclick="viewPosts()" href="#">View Posts</a>
@@ -58,7 +58,7 @@
     <div class="row centerRow justify-content-center">
         <div class="col-8">
 
-            <form id="postForm" method="post" class="d-none" action="http://localhost:5005/newpost">
+            <form id="postForm" class="d-none" action="">
                 <div class="form-group">
                     <label for="title">Title</label>
                     <input type="text" class="form-control" name="title" id="title"
@@ -69,7 +69,7 @@
                     <textarea class="form-control" rows="5" name="message" id="message"
                               placeholder="Enter Post"> </textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Post</button>
+                <button onclick="newPost(); return false;" class="btn btn-primary">Post</button>
             </form>
 
             <div id="centerContent"></div>
