--- a/services/web/app/templates/main.html
+++ b/services/web/app/templates/main.html
@@ -21,7 +21,7 @@
 
 <div class="container" style="">
     <nav class="navbar navbar-expand-lg navbar-dark bg-info rounded">
-        <a class="navbar-brand" href="index.html">Connect</a>
+        <a class="navbar-brand" href="#">Connect</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
